# llm-context.py

./: .gitignore  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  cliff.toml  pyproject.toml  smithery.yaml
.llm-code-context/: .gitignore  claude-custom.md  config.json  custom-prompt.md  tech-summary.md
.llm-code-context/templates/: full-context.j2  sel-file-contents.j2
.llm-context/: .gitignore  config.json  config.toml  config.yaml  custom-prompt.md  lc-project-notes.md  lc-state.toml  pydev-prompt.md  tech-summary.md
.llm-context/rules/: code.md  filters.md  flt-no-excerpters.md  flt-no-highlighter.md  flt-repo-base.md  lc-block-all.md  lc-code.md  lc-gitignores.md  lc-no-files.md  prm-code.md  prm-compact.md  prm-rules.md  prm-templates.md  python.md  tmp-prm-docs-update.md
.llm-context/rules/lc/: ins-developer.md  ins-rule-framework.md  ins-rule-intro.md  prm-rule-create.md  sty-code.md  sty-jupyter.md
.llm-context/templates/: context.j2  files.j2  full-context.j2  highlights.j2  lc-context-mcp.j2  lc-context.j2  lc-focus-help.j2  lc-overview.j2  lc-prompt.j2
.llm-context/templates/lc/: end-prompt.j2  excerpts.j2  missing-excerpted.j2  missing-files.j2  overview.j2  preview.j2
docs/: usage.md  user-guide.md
src/: composite_ignorer.py  config_manager.py  context_generator.py  file_ignorer.py  file_selector.py  file_selector_ui.py  gitignore_parser.py  main.py  path_ignorer.py  pathspec_ignorer.py  template_processor.py
src/llm_code_context/: __init__.py  config_manager.py  context_generator.py  file_selector.py  file_selector_ui.py  folder_structure_diagram.py  git_ignorer.py  gitignore_parser.py  initializer.py  path_converter.py  pathspec_ignorer.py  template.py  template_processor.py
src/llm_code_context/templates/: all-file-contents.j2
src/llm_context/: cli.py  cmd_pipeline.py  commands.py  config.py  config_manager.py  context_generator.py  context_preview.py  context_spec.py  exceptions.py  excerpt_processor.py  exec_env.py  file_selector.py  flat_diagram.py  folder_diagram.py  folder_structure_diagram.py  full_overview.py  mcp.py  mcp_tools.py  overviews.py  profile.py  project.py  project_settings.py  project_setup.py  rule.py  rule_parser.py  state.py  utils.py
src/llm_context/excerpt_processors/: tree_sitter_outline.py
src/llm_context/excerpters/: base.py  code_outliner.py  language_mapping.py  markdown.py  outliner.py  parser.py  service.py  sfc.py  sfc_excerpter.py  tagger.py
src/llm_context/excerpters/tag-qry/: tree-sitter-javascript-tags.scm  tree-sitter-php-tags.scm  tree-sitter-python-tags.scm
src/llm_context/excerpters/ts-qry/: README.md  elisp-tags.scm  go-tags.scm  markdown.scm  svelte-injections.scm  tree-sitter-c-tags.scm  tree-sitter-elixir-tags.scm  tree-sitter-java-tags.scm
src/llm_context/highlighter/: highlighter.py  language_mapping.py  outliner.py  parser.py  tagger.py
src/llm_context/highlighter/bdy-qry/: tree-sitter-c-body.scm  tree-sitter-cpp-body.scm  tree-sitter-csharp-body.scm  tree-sitter-elisp-body.scm  tree-sitter-elixir-body.scm  tree-sitter-elm-body.scm  tree-sitter-go-body.scm  tree-sitter-java-body.scm  tree-sitter-javascript-body.scm  tree-sitter-php-body.scm  tree-sitter-python-body.scm  tree-sitter-ruby-body.scm  tree-sitter-rust-body.scm  tree-sitter-typescript-body.scm
src/llm_context/highlighter/tag-qry/: README.md  tree-sitter-cpp-tags.scm  tree-sitter-csharp-tags.scm  tree-sitter-ruby-tags.scm  tree-sitter-typescript-tags.scm
src/llm_context/lc_resources/: lc-context-mcp.j2  lc-context.j2  lc-definitions.j2  lc-prompt.j2
src/llm_context/lc_resources/completions/: bash-completion.sh  zsh-completion.zsh
src/llm_context/lc_resources/rules/: lc-code.md  lc-create-rule-common.md  lc-create-rule-new-chat-prefix.md  lc-create-rule.md  lc-filters.md  lc-focus-common.md  lc-focus-new-chat-prefix.md  lc-focus.md  lc-gitignores.md  lc-no-files.md  lc-no-full-files.md  lc-no-outline-files.md  lc-overview-only.md
src/llm_context/lc_resources/rules/lc/: code-style.md  code.md  create-rule-common.md  create-rule-new-chat-prefix.md  create-rule.md  exc-base.md  filters.md  flt-base.md  flt-no-outline.md  ins-developer.md  ins-rule-framework.md  javascript-style.md  jupyter-style.md  no-files.md  no-full-files.md  no-outline-files.md  prm-developer.md  python-style.md  sty-code.md  sty-javascript.md  sty-python.md
src/llm_context/lc_resources/skills/lc-curate-context/: EXAMPLES.md  Skill.md
src/llm_context/lc_resources/skills/llm-context-rule-creator/: EXAMPLES.md  PATTERNS.md  SYNTAX.md  Skill.md  TROUBLESHOOTING.md
src/llm_context/lc_resources/templates/: lc-context-mcp.j2  lc-context.j2  lc-end-prompt.j2  lc-excerpts.j2  lc-focus-help.j2  lc-overview.j2
src/llm_context/lc_resources/templates/excerpters/: lc-excerpts.j2
src/llm_context/lc_resources/templates/lc/: context.j2  excerpts.j2  files.j2  missing-files.j2  outlines.j2  overview.j2
src/llm_context/lc_resources/templates/lc/excerpters/: code-outliner.j2  excerpts.j2  sfc.j2
src/llm_context/templates/: context.j2  lc-context-mcp.j2  lc-context.j2  lc-prompt.md
tests/: test-highlight-languages.py  test_body_languages.py  test_composite_ignorer.py  test_excerpt_languages.py  test_file_ignorer.py  test_include_filters.py  test_logging.py  test_nested_gitignores.py  test_outline_languages.py  test_outliner.py  test_parser.py  test_path_converter.py  test_pathspec_ignorer.py
