[project]
name = "llm-context"
version = "0.2.2"
description = "Share code context with LLMs via MCP or clipboard. Profile-based customization enables easy switching between different tasks (like code review and documentation). Code outlining support is available as an experimental feature."
authors = [
  { name = "restlessronin", email = "88921269+restlessronin@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
packages = [{ include = "llm_context", from = "src" }]
include = ["src/llm_context/templates/*.j2"]
repository = "https://github.com/cyberchitta/llm-context.py"
license = "Apache-2.0"
keywords = ["llm", "ai", "context", "code", "clipboard", "chat"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Code Generators",
  "Topic :: Utilities",
  "Topic :: Communications :: Chat",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "jinja2>=3.1.4, <4.0",
  "mcp>=1.0.0",
  "packaging>=24.1, <25.0",
  "pathspec>=0.12.1, <0.13.0",
  "pyperclip>=1.9.0, <2.0.0",
  "tomlkit>=0.13.2",
]

[project.optional-dependencies]
outline = ["tree-sitter==0.21.3", "tree-sitter-languages==1.10.2"]
dev = [
  "black>=24.10.0, <25.0",
  "git-cliff>=2.6.1, <3.0",
  "isort>=5.13.2, <6.0",
  "mypy>=1.11.2, <2.0",
  "pytest>=8.3.3, <9.0",
  "ruff>=0.6.9, <1.0",
  "taplo>=0.9.3, <1.0",
]

[project.scripts]
lc-context = "llm_context.cli:context"
# lc-dirtree = "llm_context.cli:get_fs_diagram"
lc-init = "llm_context.cli:init_project"
lc-read-cliplist = "llm_context.cli:files_from_clip"
lc-mcp = "llm_context.mcp:run_server"
lc-sel-files = "llm_context.cli:select_full_files"
lc-sel-outlines = "llm_context.cli:select_outline_files"
lc-set-profile = "llm_context.cli:set_profile_with_args"
lc-version = "llm_context.cli:show_version"

[tool.uv]
override-dependencies = ["tree-sitter-languages==1.10.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::FutureWarning"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E266", "E501", "F403", "F401"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
